--- a/packs/lang/cs.yaml
+++ b/packs/lang/cs.yaml
@@ -4,6 +4,10 @@ settings:
   primaryStressDiv: 1.25
   secondaryStressDiv: 1.07
 
+  # Trill modulation (rolled R). Applied only when the phoneme has _isTrill: true.
+  trillModulationMs: 50
+  trillModulationFadeMs: 2
+
   # Czech vowel length (short vs long) is phonemic.
   lengthenedScale: 1.4
 
