--- a/packs/lang/en-us.yaml
+++ b/packs/lang/en-us.yaml
@@ -4,10 +4,10 @@
 settings:
   # US can sound overly "clicky" / separated in clusters (e.g. "start", "smart")
   # if we insert stop closures everywhere.
-  stopClosureMode: always
-  stopClosureVowelGapMs: 24
+  stopClosureMode: vowel-and-cluster
+  stopClosureVowelGapMs: 22
   stopClosureVowelFadeMs: 6
-  stopClosureClusterGapMs: 16
+  stopClosureClusterGapMs: 14
   stopClosureClusterFadeMs: 3
 
   # Helps "bank" / "think" / "thanks" etc feel less "boxy" by giving nasal+stop
@@ -30,7 +30,7 @@ settings:
   autoDiphthongOffglideToSemivowel: false
 
   # Shorten semivowel offglides inside words (helps "player", "layer", etc.).
-  semivowelOffglideScale: 0.1
+  semivowelOffglideScale: 0.01
   stressedVowelHiatusGapMs: 0
   stressedVowelHiatusFadeMs: 0
   legacyPitchMode: false
@@ -106,7 +106,7 @@ normalization:
     # But when FACE is followed by a consonant (e.g. donate = ...eɪt), a full-strength /j/
     # can sound a bit too "sung". Use a softer glide there.
     - from: "eɪ"
-      to:   "eᴊ"
+      to:   "e͡ᴊ"
       when:
         atWordEnd: false
     - from: "e͡ɪ"
@@ -114,7 +114,7 @@ normalization:
       when:
         atWordEnd: false
     - from: "eɪ"
-      to:   "ej"
+      to:   "e͡j"
     - from: "e͡ɪ"
       to:   "e͡j"
 
@@ -198,6 +198,18 @@ normalization:
     - from: "ɜ"
       to:   "ɝ"
 
+    # In many common words ending in -art (start/smart/cart/apart/depart...),
+    # /ɑːɹt/ can sound overly open as a separate "ah" + "r" segment in a formant synth.
+    # Nudge it toward a more central "uh" before word-final /t/.
+    - from: "ɑːɹt"
+      to:   "ʌɹt"
+      when:
+        atWordEnd: true
+    - from: "ɑɹt"
+      to:   "ʌɹt"
+      when:
+        atWordEnd: true
+
     # Use a dedicated US /r/ variant.
     - from: "ɹ"
       to:   "ɻ"
@@ -210,3 +222,6 @@ normalization:
     # We intentionally *do not* undo the base English fronting of long /uː/.
     # eSpeak's en-us still outputs uː in many common words (rules, do, you),
     # and the backer multilingual "u" vowel can make them sound like "roo".
+    # Make /d͡ʒ/ a little less 'soft' by keeping the stop+fricative components explicit.
+    - from: "d͡ʒ"
+      to:   "dʒ"
