--- a/packs/lang/it.yaml
+++ b/packs/lang/it.yaml
@@ -3,3 +3,7 @@
 settings:
   primaryStressDiv: 1.25
   secondaryStressDiv: 1.07
+
+  # Trill modulation (rolled R). Applied only when the phoneme has _isTrill: true.
+  trillModulationMs: 50
+  trillModulationFadeMs: 2
