large language pack refactor to add missing phonetic values for glottalOpenQuotient.

--- a/packs/lang/default.yaml
+++ b/packs/lang/default.yaml
@@ -54,6 +54,20 @@ settings:
   stressedVowelHiatusFadeMs: 0
   semivowelOffglideScale: 1.0
 normalization:
+  aliases:
+    "E": "ɛ"
+    "I": "ɪ"
+    "O": "ɔ"
+    "U": "ʊ"
+    "V": "ʌ"
+    "@": "ə"
+    "3": "ɜ"
+    "0": "ɜ"
+    "N": "ŋ"
+    "S": "ʃ"
+    "Z": "ʒ"
+    "T": "θ"
+    "D": "ð"
   preReplacements:
     # Tie common affricate spellings into the single phonemes in Phonemes.yaml.
     - from: "tʃ"
