adds phonemes and Hungarian language rules. does not contaminate other language's phonemes.

--- a/packs/lang/en-us.yaml
+++ b/packs/lang/en-us.yaml
@@ -28,6 +28,7 @@ settings:
   spellingDiphthongMode: monophthong
   autoTieDiphthongs: false
   autoDiphthongOffglideToSemivowel: false
+  legacyPitchMode: false
 normalization:
   preReplacements:
     # Protect PRICE/MOUTH diphthongs from broad TRAP rules (e.g. five/nine/out).
